--- a/style.css
+++ b/style.css
@@ -1,9 +1,38 @@
 ul {
   list-style: none;
   display: inline-grid;
-  background-color: lightblue;
+  border: 4px solid lightblue;
+  background-color: #f5faff;
+  border-radius: 4px;
   padding: 20px;
   margin-left: 20px;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+}
+
+.header {
+  background-color: #F0F8FF;
+  display: flex;
+  justify-content: space-between;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  margin: 0;
+}
+
+.body {
+  display: flex;
+  justify-content: space-around;
+  padding: 25px;
+}
+
+.left {
+  display: flex;
+  flex-direction: column;
 }
 
 #exit {
@@ -16,4 +45,33 @@ ul {
 
 #exit:hover {
   background: lightgrey;
+}
+
+.addbook {
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  width: 30%;
+  align-content: flex-start;
+  justify-content: flex-start;
+}
+
+#submit {
+  background-color: #F0F8FF;
+  border: none;
+  color: black;
+  padding: 5px 5px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  filter: drop-shadow(3px 3px #4444dd);
+}
+
+#submit:hover {
+  background-color: #87CEEB;
+  color: white;
+}
+
+h1 {
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
 }
