--- a/style.css
+++ b/style.css
@@ -9,6 +9,12 @@ ul {
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
 }
 
+li {
+  list-style: none;
+  font-size: 14px;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+}
+
 .header {
   background-color: #F0F8FF;
   display: flex;
@@ -22,17 +28,29 @@ body {
   flex-direction: column;
   justify-content: space-around;
   margin: 0;
+  min-height: 100vh;
 }
 
 .body {
   display: flex;
   justify-content: space-around;
   padding: 25px;
+  flex: 1;
 }
 
-.left {
+.right {
   display: flex;
   flex-direction: column;
+  width: 50%;
+}
+
+footer {
+  display: block;
+  padding: 4px;
+  text-align: center;
+  background-color: #E5E7DD;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-size: 12px;
 }
 
 #exit {
@@ -64,7 +82,7 @@ body {
   text-align: center;
   text-decoration: none;
   font-size: 16px;
-  filter: drop-shadow(3px 3px #4444dd);
+  filter: drop-shadow(0px 2px #4444dd);
 }
 
 #submit:hover {
