--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ li {
   background-color: #F0F8FF;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding-left: 20px;
   padding-right: 20px;
 }
@@ -34,14 +35,15 @@ body {
 .body {
   display: flex;
   justify-content: space-around;
-  padding: 25px;
   flex: 1;
 }
 
 .right {
   display: flex;
   flex-direction: column;
-  width: 50%;
+  width: 100%;
+  padding: 30px;
+  background-color: #F5F5F5;
 }
 
 footer {
@@ -69,7 +71,8 @@ footer {
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
   display: flex;
   flex-direction: column;
-  width: 30%;
+  width: 100%;
+  padding: 30px;
   align-content: flex-start;
   justify-content: flex-start;
 }
