--- a/style.css
+++ b/style.css
@@ -56,22 +56,21 @@ footer {
 }
 
 #exit {
-  width: 10%;
-  background-color: white;
+  background: none;
   border: none;
   color: red;
   font-size: 12px;
 }
 
 #exit:hover {
-  background: lightgrey;
+  color: #8b0000;
 }
 
 .addbook {
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 60%;
   padding: 30px;
   align-content: flex-start;
   justify-content: flex-start;
