--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
-ul {
+.book-container {
   list-style: none;
   display: inline-grid;
   border: 4px solid lightblue;
   background-color: #f5faff;
   border-radius: 4px;
   padding: 20px;
-  margin-left: 20px;
+  margin: 20px;
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
 }
 
-li {
+p, li {
   list-style: none;
   font-size: 14px;
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
